[package]
name = "markdown-editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "markdown-editor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_commonmark = { version = "0.18", features = ["pulldown_cmark"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true

# Windows: hide console window in release
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
