[package]
name = "markdown-editor"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "markdown-editor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_commonmark = { version = "0.18", features = ["pulldown_cmark"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
